--- a/server_ui/templates/base.html
+++ b/server_ui/templates/base.html
@@ -73,8 +73,7 @@
               <a href="mailto:{{settings.HELP_EMAIL_ADDRESS}}">Help</a>
             </li>
           </ul>
-          <form class="navbar-form navbar-right">
-            <div class="form-group">
+            <div class="form-group navbar-right">
               <ul class="nav navbar-nav">
 {% if not settings.MASTER_HELIOS %}
 	              <li><a href="http://heliosvoting.org">About Helios</a></li>
@@ -95,7 +94,6 @@
             </div>
             <div class="form-group">
             </div>
-          </form>
         </div>
         <!--/.navbar-collapse -->
       </div>
